// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a amber variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="phase-tag-amber govuk-tag govuk-phase-banner__content__tag lbh-tag phase-tag"
      >
        STAGING
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Staging Environment
      </span>
    </p>
  </div>
</div>
`;

exports[`it renders a red variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="phase-tag-red govuk-tag govuk-phase-banner__content__tag lbh-tag phase-tag"
      >
        DEV
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Development Environment
      </span>
    </p>
  </div>
</div>
`;

exports[`it renders a red variant of the Phase Banner 2`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="phase-tag-green govuk-tag govuk-phase-banner__content__tag lbh-tag phase-tag"
      >
        BETA
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Production / Beta Environment
      </span>
    </p>
  </div>
</div>
`;
